--- a/app/globals.css
+++ b/app/globals.css
@@ -5,3 +5,9 @@
 .radix-themes {
   --default-font-family: var(--font-inter) !important;
 }
+
+@layer utilities {
+  .nav-link {
+    @apply text-zinc-500 hover:text-zinc-900 transition-colors;
+  }
+}
